Update the way styles are added to static pages.
- Partial stylus files now reside in src/styles/base for now. This can change depending on new workflows down the line.
- At the root of src/styles exists .styl files for each static page. These file are processed into css files and moved to the static/css/ directory When any file matching src/styles/**/*.styl changes.
- Content pages now have a 'stylesheet' parameter in its front matter that takes a value equal to a specific css file requiredon the page. At this time, only 1 file is accepted. Errors will occur if more are given. This should be fixed in the future.

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,4 +1,4 @@
-{{ define "main" }} {{ partial "nav.html" . }} {{ .Content }}
+{{ define "main" }} {{ .Content }}
 
 <ul class="posts-list">
   {{ range .Pages }}
