--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,14 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/{{ printf .Params.stylesheet }}" />
 
   <title>{{ .Site.Title }}</title>
 </head>
 
 <body>
   <div class="container">
-    {{ block "main" . }} {{ end }}
+    {{ partial "nav.html" .}}
+
+    <main>
+      {{ block "main" . }} {{ end }}
+    </main>
+
   </div>
 </body>
 
