--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,10 @@
 <nav class="nav" role="navigation">
   <ul class="nav__list">
-    {{ $currentPage := . }}
-    {{ range .Site.Menus.main }}
-      <li>
-          <a href="{{ .URL }}">{{ .Name }}</a>
-      </li>
+    {{ $currentPage := . }} {{ range .Site.Menus.main }}
+    <li>
+      <a {{if or ($currentPage.IsMenuCurrent "main" .) (and (eq .Name "blog") (eq $currentPage.Section "posts")) }} class="active"
+        {{end}} href="{{ .URL }}">{{ .Name }}</a>
+    </li>
     {{ end }}
   </ul>
 </nav>
