The one before deployment!
- Fix bug where pre tags were going past width of article element, creating horizontal scrollbars.
- Push blog posts down below hamburger on mobile using padding.
- Update layout with fixed nav and padded main section instead of flexbox container.
- Style posts list.html template
- Add pagination to blog posts page.
- Add work list.html splash that will be updated soon.
- Added feather icon for pagination arrows.
- Updates to typography.

- Normalized CSS classes, fully embracing BEM
- Clean up Nav modifier structure.
- Add social icons to footer of blog post page.
- Update font sizes and line-heights of text on homepage.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,1 +1,10 @@
-{{ define "main" }} {{ .Content }} {{ end }}
+{{ define "main" }}
+
+
+<div class="splash-container">
+  <div class="splash">
+    {{ .Content }} {{ partial "social-icons.html" .}}
+  </div>
+</div>
+
+{{ end }}
