--- a/src/styles/base/_main.styl
+++ b/src/styles/base/_main.styl
@@ -1,16 +1,15 @@
+@import '_vars'
 @import '_reset'
-@import '_colors'
-@import '_screenSizes'
 @import '_typography'
 @import '_nav'
 
 .container 
-  display: flex
   height: 100%
-  padding: 0 1.5rem
-  
-  @media screen and (min-width: $tabletWidth)
-    padding: 0 3rem
 
 main
-  flex-grow: 1
+  height: 100%
+  padding: 0 1.5rem
+
+  // compensates for the nav sidebar on tablet and desktop
+  @media screen and (min-width: $tabletWidth)
+    padding-left: "calc(1.5rem + %s)" % $navWidth
