--- a/layouts/partials/burger.html
+++ b/layouts/partials/burger.html
@@ -1,5 +1,5 @@
 <div class="burger" aria-controls="navigation" aria-label="Menu">
-  <div class="meat meat__1"></div>
-  <div class="meat meat__2"></div>
-  <div class="meat meat__3"></div>
+  <div class="burger__meat burger__meat--1"></div>
+  <div class="burger__meat burger__meat--2"></div>
+  <div class="burger__meat burger__meat--3"></div>
 </div>
