--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
-<article class="post-container">
-  <h1>{{.Title}}</h1>
+<article class="post__container">
+  <header class="post__header">
+    <h1 class="post__title">{{.Title}}</h1>
+    <time datetime="{{ .Date }}" class="post__date">{{ .Date.Format "Jan 2 2006" }}</time>
+  </header>
   {{ .Content }}
 </article>
-{{ end }}
+{{ partial "social-icons.html" .}} {{ end }}
