--- a/src/styles/base/_reset.styl
+++ b/src/styles/base/_reset.styl
@@ -1,9 +1,15 @@
 html,
-body,
-* 
+body 
+  background-color: $white
+  color: $black
+  height: 100%
+
+html
+  box-sizing: border-box
+  
+*,
+*:before,
+*:after
   padding: 0
   margin: 0
-
-html,
-body 
-  height: 100%
+  box-sizing: inherit 
