--- a/src/styles/post.styl
+++ b/src/styles/post.styl
@@ -1,6 +1,55 @@
 @import 'base/_main'
+@import 'base/_social-icons'
 
-.post-container
+.post__container
   width: 34rem
+  max-width: 100%
   margin: 0 auto
-  padding-top: 4rem
+  padding: 8rem 0 4rem
+
+  @media (min-width: $tabletWidth)
+    padding-top: 4rem
+
+.post__title 
+  margin-top: 0
+
+.post__date
+  color: $grey
+  font-size: 0.8rem
+
+p
+  font-weight: 300
+
+p code
+  display: inline-block 
+
+  &:before,
+  &:after
+    content: '`'
+
+pre
+  border: 1px solid #e7e7e7
+  border-radius: 2px
+  margin: 1.5rem auto 0
+  padding: 1rem
+  overflow-x: auto
+  white-space: pre
+
+  code
+    font-size: 12px
+
+    @media screen and (min-width: $tabletWidth)
+      font-size: 13px
+
+blockquote
+  width: 95%
+  margin: 0 auto
+  font-size: 1rem
+
+p a
+  font-weight: 400
+  color: $black
+
+.social-icons
+  justify-content: center
+  padding: 0 0 4rem
