--- a/src/styles/posts.styl
+++ b/src/styles/posts.styl
@@ -1,4 +1,35 @@
 @import 'base/_main'
 
-.posts-list
+.post-list-container
+  height: 100%
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+
+.post-list
   list-style: none
+  margin: 0
+
+.post__title a 
+  color: $black
+  text-decoration: none
+
+.post__date
+  color: $grey
+  font-size: 0.8rem
+
+.paginator-container
+  margin-top: 3rem
+
+.paginator
+  display: inline-block
+  height: 24px
+  width: 24px
+  margin: 0 1.5rem
+  background-image: url(/icons/chevron-left.svg)
+  background-size: contain
+  background-repeat: no-repeat
+  
+.paginator--right
+  transform: rotate(180deg)
