--- a/src/styles/work.styl
+++ b/src/styles/work.styl
@@ -1,1 +1,14 @@
 @import 'base/_main'
+
+.portfolio-container
+  height: 100%
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+
+.emoji
+  display: block
+  text-align: center
+  font-size: 2rem
+  margin-bottom: 0.5rem
