- Remove .vscode directory from .gitignore file. - Reformat html files to fix vscode's ugly preformatting mess.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 
-
-<div class="splash-container">
-  <div class="splash">
-    {{ .Content }} {{ partial "social-icons.html" .}}
+  <div class="splash-container">
+    <div class="splash">
+      {{ .Content }} 
+      {{ partial "social-icons.html" .}}
+    </div>
   </div>
-</div>
 
 {{ end }}
