--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,9 +1,12 @@
 {{ define "main" }}
-<article class="post__container">
-  <header class="post__header">
-    <h1 class="post__title">{{.Title}}</h1>
-    <time datetime="{{ .Date }}" class="post__date">{{ .Date.Format "Jan 2 2006" }}</time>
-  </header>
-  {{ .Content }}
-</article>
-{{ partial "social-icons.html" .}} {{ end }}
+
+  <article class="post__container">
+    <header class="post__header">
+      <h1 class="post__title">{{.Title}}</h1>
+      <time datetime="{{ .Date }}" class="post__date">{{ .Date.Format "Jan 2 2006" }}</time>
+    </header>
+    {{ .Content }}
+  </article>
+  
+  {{ partial "social-icons.html" .}} 
+{{ end }}
