--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,17 +1,19 @@
-{{ define "main" }} {{ .Content }}
+{{ define "main" }} 
 
-<div class="post-list-container">
-  <ul class="post-list">
-    {{ range (.Paginator 5).Pages }}
-    <li class="post">
-      <div class="post__header">
-        <h2 class="post__title"><a href="{{.RelPermalink}}">{{ .Title }}</a></h2>
-        <time class="post__date" datetime="{{ .Date }}">{{ .Date.Format "Jan 2 2006" }}</time>
-      </div>
-    </li>
-    {{ end }}
-  </ul>
-  {{ partial "pagination.html" . }}
-</div>
+  {{ .Content }}
+
+  <div class="post-list-container">
+    <ul class="post-list">
+      {{ range (.Paginator 5).Pages }}
+        <li class="post">
+          <div class="post__header">
+            <h2 class="post__title"><a href="{{.RelPermalink}}">{{ .Title }}</a></h2>
+            <time class="post__date" datetime="{{ .Date }}">{{ .Date.Format "Jan 2 2006" }}</time>
+          </div>
+        </li>
+      {{ end }}
+    </ul>
+    {{ partial "pagination.html" . }}
+  </div>
 
 {{ end }}
