--- a/layouts/work/single.html
+++ b/layouts/work/single.html
@@ -1,1 +1,6 @@
-{{ define "main" }} {{ partial "nav.html" . }} {{ .Content }} {{ end }}
+{{ define "main" }} 
+
+  {{ partial "nav.html" . }} 
+  {{ .Content }} 
+  
+{{ end }}
