--- a/src/styles/_main.styl
+++ b/src/styles/_main.styl
@@ -1,7 +1,7 @@
-@import '_vars'
-@import '_reset'
-@import '_typography'
-@import '_nav'
+@import 'partials/_vars'
+@import 'partials/_reset'
+@import 'partials/_typography'
+@import 'partials/_nav'
 
 .container 
   height: 100%
