--- a/src/styles/pages/about.styl
+++ b/src/styles/pages/about.styl
@@ -1,5 +1,6 @@
-@import 'base/_main'
-@import 'base/_social-icons'
+@import '../_main'
+@import '../partials/_social-icons'
+
 
 .splash-container
   height: 100%
