--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -1,5 +1,5 @@
-@import 'base/_main'
-@import 'base/_social-icons'
+@import '../_main'
+@import '../partials/_social-icons'
 
 .post__container
   width: 34rem
