--- a/src/styles/pages/posts.styl
+++ b/src/styles/pages/posts.styl
@@ -10,10 +10,17 @@
 .post-list
   list-style: none
   margin: 0
+  max-width: 500px
 
-.post__title a 
-  color: $black
-  text-decoration: none
+.post
+  margin-bottom: 1.5rem
+  
+.post__title 
+  margin-top: 0
+
+  a 
+    color: $black
+    text-decoration: none
 
 .post__date
   color: $grey
