New post: Hugo Directory Structure Explained.

--- a/src/styles/partials/_typography.styl
+++ b/src/styles/partials/_typography.styl
@@ -49,6 +49,7 @@ p
 
 ul,
 ol
+  padding-left: $leading
   margin-top: $leading
   margin-bottom: $leading
 
@@ -64,7 +65,7 @@ blockquote
   margin-top: $leading
   margin-bottom: $leading
   line-height: $leading
-  color: $grey
+  color: #666
   font-style: italic
 
 pre
@@ -74,7 +75,6 @@ code
   color: $primary
   font-family: menlo, monospace
   font-size: 0.9rem
-  vertical-align: middle
 
 .lead
   font-size: $scale * 1rem
