Add a new shortcode to elegantly include codepen embeds into content markdown files.
- Includes typography updates to the post pages.

--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -53,3 +53,21 @@ p a
 .social-icons
   justify-content: center
   padding: 0 0 4rem
+
+img
+  width: 100%
+  max-width: 500px
+  margin: 0 auto
+  display: block
+
+.cp_embed_wrapper 
+  margin-top: 1.5rem
+
+.codepen__caption
+  display: block
+  width: 75%
+  margin: 0.5rem auto 0
+  color: #9b9b9b
+  font-size: .8rem
+  font-weight: 300
+  text-align: center
