--- a/src/styles/partials/_typography.styl
+++ b/src/styles/partials/_typography.styl
@@ -21,6 +21,9 @@ h6
   margin-bottom: 0
   line-height: $leading
 
+  code
+    font-size: inherit
+
 h1
   font-size: 1.5 * $scale * 1rem
   line-height: 1.5 * $leading
