--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -1,5 +1,1 @@
-{{ define "main" }} 
-
-  {{ .Content }} 
-  
-{{ end }}
+{{ define "main" }} {{ .Content }} {{ partial "social-icons.html" .}} {{ end }}
