--- a/src/styles/pages/about.styl
+++ b/src/styles/pages/about.styl
@@ -54,3 +54,12 @@
     font-weight: 300
     font-size: 1.414em
 
+/* overrides */
+
+.burger
+  position: absolute
+
+main
+  padding-top: 0
+  padding-bottom: 0
+  height: 100%
