--- a/src/styles/pages/work.styl
+++ b/src/styles/pages/work.styl
@@ -1,4 +1,5 @@
 @import '../_main'
+@import '../partials/_social-icons'
 
 .work__container 
   height: 100%
@@ -38,3 +39,9 @@
 .work__item-date
   color: $darkGrey
   margin: 0 0 0.2rem
+
+/* overrides */
+
+.social-icons
+  justify-content: center
+  padding: 0 0 4rem
