--- a/src/styles/partials/_burger.styl
+++ b/src/styles/partials/_burger.styl
@@ -2,7 +2,7 @@ $meatWidth = 28px
 $meatHeight = 2px
 
 .burger
-  position: absolute
+  position: relative
   top: 10px
   left: 10px
   width: 50px
@@ -32,11 +32,11 @@ $meatHeight = 2px
   transform: translateY(10px)
 
 
-.burger--close .burger__meat--1 
+.nav--active .burger__meat--1 
   transform: rotate(45deg)
 
-.burger--close .burger__meat--2
+.nav--active .burger__meat--2
   opacity: 0
 
-.burger--close .burger__meat--3
+.nav--active .burger__meat--3
   transform: rotate(-45deg)
