--- a/src/styles/partials/_nav.styl
+++ b/src/styles/partials/_nav.styl
@@ -16,11 +16,11 @@
   @media screen and (min-width: $tabletWidth)
     display: block
     visibility: visible
-    padding-top: 4rem
+    padding-top: 3rem
     width: $navWidth
+    position: fixed
 
-
-.nav--active
+.nav--active .nav
   visibility: visible
 
 
