--- a/layouts/work/single.html
+++ b/layouts/work/single.html
@@ -1,6 +1,1 @@
-{{ define "main" }} 
-
-  {{ partial "nav.html" . }} 
-  {{ .Content }} 
-  
-{{ end }}
+{{ define "main" }} {{ .Content }} {{ partial "social-icons.html" .}} {{ end }}
