--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -5,10 +5,7 @@
   width: 34rem
   max-width: 100%
   margin: 0 auto
-  padding: 8rem 0 4rem
-
-  @media (min-width: $tabletWidth)
-    padding-top: 4rem
+  padding-bottom: 4rem
 
 .post__title 
   margin-top: 0
@@ -50,10 +47,6 @@ p a
   font-weight: 400
   color: $black
 
-.social-icons
-  justify-content: center
-  padding: 0 0 4rem
-
 img
   width: 100%
   max-width: 500px
@@ -71,3 +64,9 @@ img
   font-size: .8rem
   font-weight: 300
   text-align: center
+
+/* overrides */
+
+.social-icons
+  justify-content: center
+  padding: 0 0 4rem
