--- a/src/styles/_main.styl
+++ b/src/styles/_main.styl
@@ -15,3 +15,6 @@ main
   // compensates for the nav sidebar on tablet and desktop
   @media screen and (min-width: $tabletWidth)
     padding-left: "calc(1.5rem + %s)" % $navWidth
+
+  @media screen and (max-width: $tabletWidth)
+    padding-top: "calc(3rem + %s)" % $burgerContainerHeight
