--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
 
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88270202-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-88270202-1');
-  </script>
-  <meta charset="UTF-8">
-  <meta name="language" content="en">
-  <title>{{ .Page.Title }}</title>
-  <meta name="description" content="{{ if .IsHome}}{{ .Site.Params.Description }}{{ else }}{{.Page.Params.Description}}{{ end }}">
-  <meta name="keywords" content="{{ delimit .Keywords " , " }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="google-site-verification" content="8cyiY374WL2LGr87fBghcdJCRx6BaPNBvLjeZlk6tyc" />
-  <link rel="shortcut icon" type="image/png" href="/favicon.ico" />
-  <link rel="stylesheet" href="/css/{{ printf .Params.stylesheet }}" /> {{ range .AlternativeOutputFormats -}} {{ printf `
-  <link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.Suffix .Permalink $.Site.Title | safeHTML }} {{ end -}}
-</head>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88270202-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'UA-88270202-1');
+    </script>
 
-<body>
-  <div class="container">
+    <title>{{ .Page.Title }}</title>
 
-    {{ partial "burger.html" .}} {{ partial "nav.html" .}}
+    <meta charset="UTF-8">
+    <meta name="language" content="en">
+    <meta name="description" content="{{ if .IsHome}}{{ .Site.Params.Description }}{{ else }}{{.Page.Params.Description}}{{ end }}">
+    <meta name="keywords" content="{{ delimit .Keywords ", " }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="8cyiY374WL2LGr87fBghcdJCRx6BaPNBvLjeZlk6tyc" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"
+    />
+    <meta name="twitter:site" content="{{ .Site.Params.twitter }}" />
+    <meta name="twitter:creator" content="{{ .Site.Params.twitter }}" />
 
-    <main>
-      {{ block "main" . }} {{ end }}
-    </main>
+    <link rel="shortcut icon" type="image/png" href="/favicon.ico" />
+    <link rel="stylesheet" href="/css/{{ printf .Params.stylesheet }}" /> 
+    {{ range .AlternativeOutputFormats }} 
+      {{ printf `<link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.Suffix .Permalink $.Site.Title | safeHTML }} 
+    {{ end }} 
+    
+    {{ partial "seo_schema.html" .}}
+  </head>
 
-  </div>
+  <body>
+    <div class="container">
 
-  <script src="/js/index.js"></script>
-</body>
+      {{ partial "burger.html" .}} 
+      
+      {{ partial "nav.html" .}}
+
+      <main>
+        {{ block "main" . }} {{ end }}
+      </main>
+
+    </div>
+
+    <script src="/js/index.js"></script>
+  </body>
 
 </html>
