--- a/layouts/work/single.html
+++ b/layouts/work/single.html
@@ -1,1 +1,7 @@
-{{ define "main" }} {{ .Content }} {{ partial "social-icons.html" .}} {{ end }}
+{{ define "main" }} 
+
+  {{ .Content }} 
+  
+  {{ partial "social-icons.html" .}} 
+
+{{ end }}
