Add twitter:title metadata

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,6 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="8cyiY374WL2LGr87fBghcdJCRx6BaPNBvLjeZlk6tyc" />
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="{{ .Title }}" />
     <meta name="twitter:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"
     />
     <meta name="twitter:site" content="{{ .Site.Params.twitter }}" />
