Add reading progress bar to post template

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,6 +37,7 @@
 </head>
 
 <body>
+  {{ block "progress" . }} {{ end }}
   <div class="container">
 
     {{ partial "burger.html" .}} {{ partial "nav.html" .}}
@@ -48,6 +49,7 @@
   </div>
 
   <script src="/js/index.js"></script>
+  {{ block "scripts" . }} {{ end }}
 </body>
 
 </html>
