--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,13 +1,21 @@
+{{ define "progress" }}
+<div class="progress"></div>
+{{ end }}
+
 {{ define "main" }}
 
-  <article class="post__container">
-    <header class="post__header">
-      <h1 class="post__title">{{.Title}}</h1>
-      <time datetime="{{ .Date }}" class="post__date">{{ .Date.Format "Jan 2 2006" }}</time>
-    </header>
-    {{ .Content }}
-  </article>
-  
-  {{ partial "social-icons.html" .}} 
-  
+<article class="post__container">
+  <header class="post__header">
+    <h1 class="post__title">{{.Title}}</h1>
+    <time datetime="{{ .Date }}" class="post__date">{{ .Date.Format "Jan 2 2006" }}</time>
+  </header>
+  {{ .Content }}
+</article>
+
+{{ partial "social-icons.html" .}}
+
+{{ end }}
+
+{{ define "scripts" }}
+<script src="/js/progress.js"></script>
 {{ end }}
