--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -68,3 +68,11 @@ img
 .social-icons
   justify-content: center
   padding: 0 0 4rem
+
+.progress
+  background: linear-gradient(to right, $primary var(--scroll), transparent 0);
+  background-repeat: no-repeat;
+  position: fixed;
+  width: 100%;
+  height: 2px;
+  z-index: 3;
