--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,6 +34,7 @@
   <link rel="shortcut icon" type="image/png" href="/favicon.ico" />
   <link rel="stylesheet" href="/css/{{ printf .Params.stylesheet }}" /> {{ range .AlternativeOutputFormats }} {{ printf `
   <link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.Suffix .Permalink $.Site.Title | safeHTML }} {{ end }} {{ partial "seo_schema.html" .}}
+  {{ block "links" . }} {{ end }}
 </head>
 
 <body>
