--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -63,12 +63,6 @@ img
   font-weight: 300
   text-align: center
 
-/* overrides */
-
-.social-icons
-  justify-content: center
-  padding: 0 0 4rem
-
 .progress
   background: linear-gradient(to right, $primary var(--scroll), transparent 0);
   background-repeat: no-repeat;
@@ -76,3 +70,23 @@ img
   width: 100%;
   height: 2px;
   z-index: 3;
+
+.anchorized
+  position: relative
+
+  a 
+    text-decoration: none
+    position: absolute
+    left: -1rem
+    color: #9b9b9b
+    font-size: 1.2rem
+    font-weight: 400
+
+  a:hover
+    color: $darkGrey
+
+/* overrides */
+
+.social-icons
+  justify-content: center
+  padding: 0 0 4rem
