--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -83,6 +83,21 @@ img
     font-size: 1.2rem
     font-weight: 400
 
+.note
+  width: 90%
+  margin: 1rem auto 0
+  font-size: 12px
+  text-align: center
+  line-height: 1.5
+  color: $grey
+
+  code 
+    font-size: 12px
+    color: $darkGrey
+
+  a
+    color: $darkGrey
+
   a:hover
     color: $darkGrey
 
