--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -79,9 +79,12 @@ img
     text-decoration: none
     position: absolute
     left: -1rem
-    color: #9b9b9b
+    color: $grey
     font-size: 1.2rem
     font-weight: 400
+
+  a:hover
+    color: $darkGrey
 
 .note
   width: 90%
