--- a/layouts/shortcodes/h3.html
+++ b/layouts/shortcodes/h3.html
@@ -1,4 +1,6 @@
-<h3 class="anchorized" id="{{ anchorize .Inner }}">
-  <a href="#{{anchorize .Inner }}">#</a>
+{{ $anchorized := anchorize .Inner }}
+
+<h3 class="anchorized" id="{{ $anchorized }}">
+  <a href="#{{ $anchorized }}">#</a>
   {{ .Inner }}
 </h3>
