Add github-esque syntax highlighting to code and pre els

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -17,5 +17,7 @@
 {{ end }}
 
 {{ define "scripts" }}
+<script src="/vendor/highlightjs/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 <script src="/js/progress.js"></script>
 {{ end }}
