--- a/src/styles/partials/_typography.styl
+++ b/src/styles/partials/_typography.styl
@@ -69,11 +69,34 @@ blockquote
 
 pre
   margin-top: $leading
+  word-wrap: normal
 
 code
-  color: $primary
+  font-size: 85%
   font-family: menlo, monospace
-  font-size: 0.9rem
+  padding: 0.2em 0.4em
+  margin: 0
+  background-color: rgba(27,31,35,0.05)
+  border-radius: 3px
+
+pre>code 
+  padding: 0
+  margin: 0
+  font-size: 100%
+  word-break: normal
+  white-space: pre
+  background: transparent
+  border: 0
+
+pre code 
+  display: inline
+  padding: 0
+  margin: 0
+  overflow: visible
+  line-height: inherit
+  word-wrap: normal
+  background-color: transparent
+  border: 0
 
 .lead
   font-size: $scale * 1rem
