Update code snippet syntax highlighting

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -17,7 +17,6 @@
 {{ end }}
 
 {{ define "scripts" }}
-<script src="/vendor/highlightjs/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script src="/vendor/prism/prism.js"></script>
 <script src="/js/progress.js"></script>
 {{ end }}
