--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -1,13 +1,14 @@
 @import '../_main'
 @import '../partials/_social-icons'
-@import '../partials/_github-syntax-theme'
+@import '../partials/_github-syntax-highlighting'
 
 blockquote
   width: 95%
   margin: 0 auto
   font-size: 1rem
 
-p a
+p a,
+li a
   font-weight: 400
   color: $black
 
