--- a/src/styles/partials/_typography.styl
+++ b/src/styles/partials/_typography.styl
@@ -68,25 +68,25 @@ blockquote
   font-style: italic
 
 pre
+  line-height: 1.45
   margin-top: $leading
+  padding: 16px
   word-wrap: normal
+  overflow: auto
+  background-color: #f6f8fa
+  border-radius: 3px
 
 code
   font-size: 85%
-  font-family: menlo, monospace
+  font-family: "SFMono-Regular", Consolas, Menlo, monospace
   padding: 0.2em 0.4em
   margin: 0
   background-color: rgba(27,31,35,0.05)
   border-radius: 3px
 
 pre>code 
-  padding: 0
-  margin: 0
-  font-size: 100%
   word-break: normal
   white-space: pre
-  background: transparent
-  border: 0
 
 pre code 
   display: inline
