Add support for blog tags

--- a/src/styles/_main.styl
+++ b/src/styles/_main.styl
@@ -16,5 +16,5 @@ main
   @media screen and (min-width: $tabletWidth)
     padding-left: "calc(1.5rem + %s)" % $navWidth
 
-  @media screen and (max-width: $tabletWidth)
+  @media screen and (max-width: $tabletWidth - 1)
     padding-top: "calc(3rem + %s)" % $burgerContainerHeight
