--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -32,9 +32,14 @@
   <meta name="twitter:image" content={{ printf `%simg/thumbnail.jpeg` .Site.BaseURL}} />
 
   <link rel="shortcut icon" type="image/png" href="/favicon.ico" />
-  <link rel="stylesheet" href="/css/{{ printf .Params.stylesheet }}" /> {{ range .AlternativeOutputFormats }} {{ printf `
-  <link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.Suffix .Permalink $.Site.Title | safeHTML }} {{ end }} {{ partial "seo_schema.html" .}}
+  {{ if isset .Params "stylesheet" }}
+  <link rel="stylesheet" href="/css/{{ printf .Params.stylesheet }}" /> 
+  {{ end }}
+  {{ range .AlternativeOutputFormats }} 
+  {{ printf `<link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.Suffix .Permalink $.Site.Title | safeHTML }} 
+  {{ end }} 
   {{ block "links" . }} {{ end }}
+  {{ partial "seo_schema.html" .}}
 </head>
 
 <body>
