--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -90,6 +90,31 @@ img
   a:hover
     color: $darkGrey
 
+.tags__container
+  margin-top: 2rem
+
+  .tags__list
+    padding: 0
+    margin: 0
+    list-style: none
+
+  .tag__item
+    margin-right: 1rem
+    display: inline-block
+
+    &:last-child 
+      margin-right: 0
+
+  .tag__link
+    display: inline-block
+    text-decoration: none
+    padding: .2em .4em
+    border-radius: 3px
+    background: rgba(27,31,35,0.05)
+
+    &:hover
+      background: rgba(27,31,35,0.1)
+
 /* overrides */
 .social-icons
   justify-content: center
