--- a/src/styles/pages/posts.styl
+++ b/src/styles/pages/posts.styl
@@ -1,47 +1,2 @@
 @import '../_main'
-
-.post-list__container
-  height: 100%
-  display: flex
-  justify-content: center
-  align-items: center
-
-.post-list__inner
-  position: relative
-
-.post-list
-  list-style: none
-  margin: 0
-  max-width: 500px
-  padding: 0
-
-.post
-  margin-bottom: 1.5rem
-  
-.post__title 
-  margin-top: 0
-
-  a 
-    color: $black
-    text-decoration: none
-
-.post__date
-  color: $grey
-  font-size: 0.8rem
-
-.paginator-container
-  position: absolute
-  width: 100%
-  text-align: center
-
-.paginator
-  display: inline-block
-  height: 24px
-  width: 24px
-  margin: 0 1.5rem
-  background-image: url(/icons/chevron-left.svg)
-  background-size: contain
-  background-repeat: no-repeat
-  
-.paginator--right
-  transform: rotate(180deg)
+@import '../partials/_post-list'
