--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,4 +1,4 @@
-{{ define "main" }} {{ .Content }}
+{{ define "main" }} 
 
 <div class="post-list__container">
   <ul class="post-list">
@@ -9,10 +9,12 @@
         <h2 class="post__title">
           <a href="{{.RelPermalink}}">{{ .Title }}</a>
         </h2>
+        {{ partial "tags.html" .}}
       </div>
     </li>
     {{ end }}
   </ul>
+  {{ partial "browse-by-tag.html" .}}
 </div>
 
 {{ end }}
