--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -90,30 +90,27 @@ img
   a:hover
     color: $darkGrey
 
-.tags__container
-  margin-top: 2rem
+.tags__list
+  padding: 0
+  margin: 2rem 0 0
+  list-style: none
 
-  .tags__list
-    padding: 0
-    margin: 0
-    list-style: none
+.tag__item
+  margin-right: 1rem
+  display: inline-block
 
-  .tag__item
-    margin-right: 1rem
-    display: inline-block
+  &:last-child 
+    margin-right: 0
 
-    &:last-child 
-      margin-right: 0
+.tag__link
+  display: inline-block
+  text-decoration: none
+  padding: .2em .4em
+  border-radius: 3px
+  background: rgba(27,31,35,0.05)
 
-  .tag__link
-    display: inline-block
-    text-decoration: none
-    padding: .2em .4em
-    border-radius: 3px
-    background: rgba(27,31,35,0.05)
-
-    &:hover
-      background: rgba(27,31,35,0.1)
+  &:hover
+    background: rgba(27,31,35,0.1)
 
 /* overrides */
 .social-icons
