--- a/src/styles/pages/posts.styl
+++ b/src/styles/pages/posts.styl
@@ -1,2 +1,44 @@
 @import '../_main'
 @import '../partials/_post-list'
+
+.tags__list
+  list-style: none
+  padding: 0;
+  margin: 0;
+  padding-left: 50px
+  flex-shrink: 0
+
+  @media screen and (max-width: $tabletWidth - 1)
+    display: none
+
+.post__header .tags__list
+  display: none
+  padding-left: 0
+
+  @media screen and (max-width: $tabletWidth - 1)
+    display: block
+
+  .tag__item
+    display: inline-block
+    margin-right: 10px
+
+    &:last-child
+      margin-right: 0
+    
+.tag__link
+  text-decoration: none 
+  color: $grey
+  font-size: 0.8rem
+
+  &::before
+    content: '#'
+    font-size: 0.7rem
+    padding-right: 1px
+
+  &:hover
+    color: $darkGrey
+
+/* page overrides */
+.post-list__container
+  display: flex
+  justify-content: space-between
