--- a/src/styles/pages/posts.styl
+++ b/src/styles/pages/posts.styl
@@ -24,11 +24,14 @@
 
     &:last-child
       margin-right: 0
+
+  .tag__link
+    font-size: 0.8rem
     
 .tag__link
   text-decoration: none 
   color: $grey
-  font-size: 0.8rem
+  font-size: 0.9rem
 
   &::before
     content: '#'
