--- a/src/styles/partials/_typography.styl
+++ b/src/styles/partials/_typography.styl
@@ -7,6 +7,7 @@ $leading        = $baseLineHeight * 1rem
 html
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu,Cantarell, "Helvetica Neue", sans-serif
   -webkit-font-smoothing: antialiased
+  font-size: 95%
 
   @media screen and (min-width: $tabletWidth)
     font-size: ($baseFontSize / 16) * 100%
