--- a/src/styles/pages/posts.styl
+++ b/src/styles/pages/posts.styl
@@ -8,14 +8,14 @@
   padding-left: 50px
   flex-shrink: 0
 
-  @media screen and (max-width: $tabletWidth - 1)
+  @media screen and (max-width: $medium - 1)
     display: none
 
 .post__header .tags__list
   display: none
   padding-left: 0
 
-  @media screen and (max-width: $tabletWidth - 1)
+  @media screen and (max-width: $medium - 1)
     display: block
 
   .tag__item
