--- a/src/styles/partials/_burger.styl
+++ b/src/styles/partials/_burger.styl
@@ -8,7 +8,7 @@
   background: #fff
   z-index: 2
 
-  @media screen and (min-width: $tabletWidth)
+  @media screen and (min-width: $medium)
     display: none
 
 
