--- a/src/styles/partials/_post-list.styl
+++ b/src/styles/partials/_post-list.styl
@@ -1,9 +1,9 @@
 .post-list__container
   margin: 0 auto
-  max-width: 980px
+  max-width: 1200px
   width: 100%
 
-  @media screen and (min-width: $tabletWidth)
+  @media screen and (min-width: $medium)
     padding-left: 50px
 
 .post-list
