--- a/src/styles/partials/_typography.styl
+++ b/src/styles/partials/_typography.styl
@@ -9,8 +9,11 @@ html
   -webkit-font-smoothing: antialiased
   font-size: 95%
 
-  @media screen and (min-width: $tabletWidth)
-    font-size: ($baseFontSize / 16) * 100%
+  @media screen and (min-width: $medium)
+    font-size: 100%
+
+  @media screen and (min-width: $large)
+    font-size: 115%
 
 h1,
 h2,
