--- a/src/styles/pages/about.styl
+++ b/src/styles/pages/about.styl
@@ -9,7 +9,7 @@
   align-items: center
   font-size: 16px
 
-  @media screen and (min-width: $tabletWidth)
+  @media screen and (min-width: $medium)
     font-size: 18px
 
 
@@ -32,7 +32,7 @@
     @media screen and (min-width: 600px)
       width: 75%
 
-    @media screen and (min-width: $tabletWidth) 
+    @media screen and (min-width: $medium) 
       width: 65%
   
   a
