Update blockquote color

--- a/src/styles/partials/_typography.styl
+++ b/src/styles/partials/_typography.styl
@@ -68,7 +68,7 @@ blockquote
   margin-top: $leading
   margin-bottom: $leading
   line-height: $leading
-  color: #666
+  color: $darkGrey
   font-style: italic
 
 pre
