--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -116,3 +116,20 @@ img
 .social-icons
   justify-content: center
   padding: 0 0 4rem
+
+.post__content
+
+  ul,
+  ol
+    padding: 0
+    margin-left: 15px
+    list-style: none
+
+    li
+      margin-bottom: 0.5rem
+
+      &::before
+        content: '-'
+        color: $darkGrey
+        position: absolute
+        margin-left: -15px
