--- a/src/styles/partials/_github-syntax-highlighting.styl
+++ b/src/styles/partials/_github-syntax-highlighting.styl
@@ -50,7 +50,8 @@ pre[class*="language-"]
 /* JSX */
 .language-jsx .token.punctuation,
 .language-jsx .token.tag .token.punctuation,
-.language-jsx .token.tag .token.script
+.language-jsx .token.tag .token.script,
+.language-jsx .token.plain-text
   color: #24292e
 
 .language-jsx .token.tag .token.attr-name
