New post: React v16.6.0 features

--- a/src/styles/pages/post.styl
+++ b/src/styles/pages/post.styl
@@ -112,6 +112,12 @@ img
   &:hover
     background: rgba(27,31,35,0.1)
 
+.gif
+  margin-top: 1.5rem
+
+  img
+    max-width: 350px
+
 /* overrides */
 .social-icons
   justify-content: center
